[project]
name = "matrix-task-queue-bot"
version = "0.1.0"
description = "Matrix bot for task queue management — text commands and widget event handling"
requires-python = ">=3.12"
dependencies = [
    "matrix-nio[e2e]>=0.25.2",
    "httpx>=0.28.0",
    "watchdog>=6.0.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
matrix-task-queue-bot = "src.bot:main"
